Text alignment issues fixed

--- a/src/pages/home/lazyCard.css
+++ b/src/pages/home/lazyCard.css
@@ -69,10 +69,16 @@
       width: 60%;
   }
 
-  .round-stripe{
+  .circular-stripe{
       width: 30px;
-      height: 30px;
-      border-radius: 50%;
+      height: 30px !important;
+      border-radius: 50% !important;
+  }
+
+  .round-stripe{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
   }
   
   .img, .stripe {
